# MPI_2019_SPRING

./: .gitignore  README.md
dynamic_recive/: CMakeLists.txt  mpi_status.c
hello/: mpi_hello_world
homework1/: CMakeLists.txt  hw1_1.c  hw1_2.cc  hw1_3.cc  hw1_3.cc.bak  hw2_1.cc  hw2_2.cc  hw2_3.cc  monte_carlo.cc
homework1/data/small_file/: small_119.txt  small_178.txt
homework1/problem1/: all_gather.c
homework1/problem2/: matrix.cc
homework2/: CMakeLists.txt  hw2_1.cc  hw2_2.cc  hw2_3.cc
random_work/: CMakeLists.txt  mpi_random_walk.cc
scatter_gather/: CMakeLists.txt  all_avg_compare.c  avg_compare.c
send_recive/: CMakeLists.txt  Makefile  mpi_ping_pong.c  mpi_ring.c  mpi_send_recive.c
